--- a/node/.env
+++ b/node/.env
@@ -1,2 +1,4 @@
-DBCONN=mongodb+srv://chaurasiyanitin264:wOeL0cGoJXDKhRQ5@cluster0.cth5l.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DBCONN=mongodb+srv://chaurasiyanitin264:2J1ci4fmIBqorUMJ@cluster0.mnfzj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=8000
+
+#2J1ci4fmIBqorUMJ
